fix(condo): DOMA-6091 update recurrent payments notifications templates (#3291)

--- a/apps/condo/lang/en/en.json
+++ b/apps/condo/lang/en/en.json
@@ -1185,16 +1185,16 @@
   "notification.messages.BANK_ACCOUNT_CREATION_REQUEST.email.title": "New request for Sber account creation",
   "notification.messages.BANK_ACCOUNT_CREATION_REQUEST.email.subject": "Bank account creation",
   "notification.messages.VOIP_INCOMING_CALL_MESSAGE.push.title": "{title}",
-  "notification.messages.RECURRENT_PAYMENT_PROCEEDING_SUCCESS_RESULT_MESSAGE.push.title": "Autopayment successful 🚀\nCheck out the payment details",
-  "notification.messages.RECURRENT_PAYMENT_PROCEEDING_UNKNOWN_ERROR_MESSAGE.push.title": "Autopayment error 🚨\nContact our technical support. We will help you fix the problem",
-  "notification.messages.RECURRENT_PAYMENT_PROCEEDING_ACQUIRING_PAYMENT_PROCEED_ERROR_MESSAGE.push.title": "Autopayment error 🚨\nContact your bank to fix the problem",
-  "notification.messages.RECURRENT_PAYMENT_PROCEEDING_SERVICE_CONSUMER_NOT_FOUND_ERROR_MESSAGE.push.title": "Autopayment error 🚨\nContact our technical support. We will help you fix the problem",
-  "notification.messages.RECURRENT_PAYMENT_PROCEEDING_LIMIT_EXCEEDED_ERROR_MESSAGE.push.title": "Autopayment error 🚨\nThe utility bill amount exceeds the auto payment limit. Check out autopayment settings",
-  "notification.messages.RECURRENT_PAYMENT_PROCEEDING_CONTEXT_NOT_FOUND_ERROR_MESSAGE.push.title": "Autopayment error 🚨\nContact our technical support. We will help you fix the problem",
-  "notification.messages.RECURRENT_PAYMENT_PROCEEDING_CONTEXT_DISABLED_ERROR_MESSAGE.push.title": "Autopayment error 🚨\nContact our technical support. We will help you fix the problem",
-  "notification.messages.RECURRENT_PAYMENT_PROCEEDING_CARD_TOKEN_NOT_VALID_ERROR_MESSAGE.push.title": "Autopayment error 🚨\nCheck your credit card. It's probably blocked, expired, or deleted",
-  "notification.messages.RECURRENT_PAYMENT_PROCEEDING_CAN_NOT_REGISTER_MULTI_PAYMENT_ERROR_MESSAGE.push.title": "Autopayment error 🚨\nContact our technical support. We will help you fix the problem",
-  "notification.messages.RECURRENT_PAYMENT_TOMORROW_PAYMENT_MESSAGE.push.title": "Autopayment reminder 😉\nPayment will be made tomorrow. Make sure there are enough funds on the card",
+  "notification.messages.RECURRENT_PAYMENT_PROCEEDING_SUCCESS_RESULT_MESSAGE.push.title": "Autopayment successful 🚀",
+  "notification.messages.RECURRENT_PAYMENT_PROCEEDING_UNKNOWN_ERROR_MESSAGE.push.title": "Autopayment error 🚨",
+  "notification.messages.RECURRENT_PAYMENT_PROCEEDING_ACQUIRING_PAYMENT_PROCEED_ERROR_MESSAGE.push.title": "Autopayment error 🚨",
+  "notification.messages.RECURRENT_PAYMENT_PROCEEDING_SERVICE_CONSUMER_NOT_FOUND_ERROR_MESSAGE.push.title": "Autopayment error 🚨",
+  "notification.messages.RECURRENT_PAYMENT_PROCEEDING_LIMIT_EXCEEDED_ERROR_MESSAGE.push.title": "Autopayment error 🚨",
+  "notification.messages.RECURRENT_PAYMENT_PROCEEDING_CONTEXT_NOT_FOUND_ERROR_MESSAGE.push.title": "Autopayment error 🚨",
+  "notification.messages.RECURRENT_PAYMENT_PROCEEDING_CONTEXT_DISABLED_ERROR_MESSAGE.push.title": "Autopayment error 🚨",
+  "notification.messages.RECURRENT_PAYMENT_PROCEEDING_CARD_TOKEN_NOT_VALID_ERROR_MESSAGE.push.title": "Autopayment error 🚨",
+  "notification.messages.RECURRENT_PAYMENT_PROCEEDING_CAN_NOT_REGISTER_MULTI_PAYMENT_ERROR_MESSAGE.push.title": "Autopayment error 🚨",
+  "notification.messages.RECURRENT_PAYMENT_TOMORROW_PAYMENT_MESSAGE.push.title": "Autopayment reminder 😉",
   "notification.messages.NEWS_ITEM_COMMON_MESSAGE_TYPE.push.title": "{title}",
   "notification.messages.NEWS_ITEM_EMERGENCY_MESSAGE_TYPE.push.title": "{title}",
   "notification.messages.B2C_APP_MESSAGE_PUSH.push.title": "{title}",
