--- a/apps/condo/lang/ru/ru.json
+++ b/apps/condo/lang/ru/ru.json
@@ -1185,16 +1185,16 @@
   "notification.messages.BANK_ACCOUNT_CREATION_REQUEST.email.title": "Новая заявка на открытие счета в Сбере",
   "notification.messages.BANK_ACCOUNT_CREATION_REQUEST.email.subject": "Открытие расчетного счета на дом",
   "notification.messages.VOIP_INCOMING_CALL_MESSAGE.push.title": "{title}",
-  "notification.messages.RECURRENT_PAYMENT_PROCEEDING_SUCCESS_RESULT_MESSAGE.push.title": "Автоплатеж прошел🚀\nОплата успешно принята, ознакомьтесь с деталями платежа",
-  "notification.messages.RECURRENT_PAYMENT_PROCEEDING_UNKNOWN_ERROR_MESSAGE.push.title": "Автоплатеж не прошел 🚨\nОбратитесь в техподдержку. Мы поможем разобраться, в чем дело",
-  "notification.messages.RECURRENT_PAYMENT_PROCEEDING_ACQUIRING_PAYMENT_PROCEED_ERROR_MESSAGE.push.title": "Автоплатеж не прошел 🚨\nПроблема на стороне банка — обратитесь туда, чтобы это исправить",
-  "notification.messages.RECURRENT_PAYMENT_PROCEEDING_SERVICE_CONSUMER_NOT_FOUND_ERROR_MESSAGE.push.title": "Автоплатеж не прошел 🚨\nОбратитесь в техподдержку. Мы поможем разобраться, в чем дело",
-  "notification.messages.RECURRENT_PAYMENT_PROCEEDING_LIMIT_EXCEEDED_ERROR_MESSAGE.push.title": "Автоплатеж не прошел 🚨\nСумма в квитанции больше лимита автоплатежа. Детали - в приложении",
-  "notification.messages.RECURRENT_PAYMENT_PROCEEDING_CONTEXT_NOT_FOUND_ERROR_MESSAGE.push.title": "Автоплатеж не прошел 🚨\nОбратитесь в техподдержку. Мы поможем разобраться, в чем дело",
-  "notification.messages.RECURRENT_PAYMENT_PROCEEDING_CONTEXT_DISABLED_ERROR_MESSAGE.push.title": "Автоплатеж не прошел 🚨\nОбратитесь в техподдержку. Мы поможем разобраться, в чем дело",
-  "notification.messages.RECURRENT_PAYMENT_PROCEEDING_CARD_TOKEN_NOT_VALID_ERROR_MESSAGE.push.title": "Автоплатеж не прошел 🚨\nПроверьте карту. Вероятно, она заблокирована, просрочена или удалена",
-  "notification.messages.RECURRENT_PAYMENT_PROCEEDING_CAN_NOT_REGISTER_MULTI_PAYMENT_ERROR_MESSAGE.push.title": "Автоплатеж не прошел 🚨\nОбратитесь в техподдержку. Мы поможем разобраться, в чем дело",
-  "notification.messages.RECURRENT_PAYMENT_TOMORROW_PAYMENT_MESSAGE.push.title": "Просто напоминаем😉\nЗавтра спишем плату за ЖКУ. Убедитесь, что на карте достаточно средств",
+  "notification.messages.RECURRENT_PAYMENT_PROCEEDING_SUCCESS_RESULT_MESSAGE.push.title": "Автоплатеж прошел 🚀",
+  "notification.messages.RECURRENT_PAYMENT_PROCEEDING_UNKNOWN_ERROR_MESSAGE.push.title": "Автоплатеж не прошел 🚨",
+  "notification.messages.RECURRENT_PAYMENT_PROCEEDING_ACQUIRING_PAYMENT_PROCEED_ERROR_MESSAGE.push.title": "Автоплатеж не прошел 🚨",
+  "notification.messages.RECURRENT_PAYMENT_PROCEEDING_SERVICE_CONSUMER_NOT_FOUND_ERROR_MESSAGE.push.title": "Автоплатеж не прошел 🚨",
+  "notification.messages.RECURRENT_PAYMENT_PROCEEDING_LIMIT_EXCEEDED_ERROR_MESSAGE.push.title": "Автоплатеж не прошел 🚨",
+  "notification.messages.RECURRENT_PAYMENT_PROCEEDING_CONTEXT_NOT_FOUND_ERROR_MESSAGE.push.title": "Автоплатеж не прошел 🚨",
+  "notification.messages.RECURRENT_PAYMENT_PROCEEDING_CONTEXT_DISABLED_ERROR_MESSAGE.push.title": "Автоплатеж не прошел 🚨",
+  "notification.messages.RECURRENT_PAYMENT_PROCEEDING_CARD_TOKEN_NOT_VALID_ERROR_MESSAGE.push.title": "Автоплатеж не прошел 🚨",
+  "notification.messages.RECURRENT_PAYMENT_PROCEEDING_CAN_NOT_REGISTER_MULTI_PAYMENT_ERROR_MESSAGE.push.title": "Автоплатеж не прошел 🚨",
+  "notification.messages.RECURRENT_PAYMENT_TOMORROW_PAYMENT_MESSAGE.push.title": "Просто напоминаем 😉",
   "notification.messages.NEWS_ITEM_COMMON_MESSAGE_TYPE.push.title": "{title}",
   "notification.messages.NEWS_ITEM_EMERGENCY_MESSAGE_TYPE.push.title": "{title}",
   "notification.messages.B2C_APP_MESSAGE_PUSH.push.title": "{title}",
