feat(condo) DOMA-6067: Introduce ticket creation limits for Residents. (#3280)
* chore(condo) DOMA-6067 write simple tests

Signed-off-by: toplenboren <toplenboren@gmail.com>

* chore(condo) HOTFIX: refactor guards.js

Signed-off-by: toplenboren <toplenboren@gmail.com>

* chore(condo) HOTFIX: reddis -> redis

Signed-off-by: toplenboren <toplenboren@gmail.com>

* chore(condo) DOMA-6067: stop resident from creating more then 10 tickets or more then 2 tickets with same description per day

Signed-off-by: toplenboren <toplenboren@gmail.com>

* chore(condo) DOMA-6067: stop resident from creating more then 10 tickets or more then 2 tickets with same description per day

Signed-off-by: toplenboren <toplenboren@gmail.com>

* chore(condo) DOMA-6067: add variables to .env example

Signed-off-by: toplenboren <toplenboren@gmail.com>

* chore(condo) DOMA-6067: add organization to the key

Signed-off-by: toplenboren <toplenboren@gmail.com>

* chore(condo) DOMA-6067: do not do request to redis if phone in whitelist

Signed-off-by: toplenboren <toplenboren@gmail.com>

* chore(condo) DOMA-6067: scope redis keys ...

Signed-off-by: toplenboren <toplenboren@gmail.com>

* chore(condo) DOMA-6067: org -> :organization:

Signed-off-by: toplenboren <toplenboren@gmail.com>

* chore(condo) HOTFIX: remove vars from .env.example

Signed-off-by: toplenboren <toplenboren@gmail.com>

* chore(condo) HOTFIX: use id insted of phone + remove whitelist

Signed-off-by: toplenboren <toplenboren@gmail.com>

* chore(condo) HOTFIX: add messages

Signed-off-by: toplenboren <toplenboren@gmail.com>

---------

Signed-off-by: toplenboren <toplenboren@gmail.com>

--- a/apps/condo/lang/en/en.json
+++ b/apps/condo/lang/en/en.json
@@ -1537,6 +1537,8 @@
   "api.user.sendMessageToSupport.WRONG_EMAIL_FORMAT": "Wrong format of specified email",
   "api.ticket.exportTicketsToExcel.NOTHING_TO_EXPORT": "No tickets to export",
   "api.ticket.updateResidentTicket.TICKET_NOT_FOUND": "Cannot find Ticket with id \"{ticketId}\" for current user",
+  "api.ticket.TICKET_FOR_PHONE_DAY_LIMIT_REACHED": "Please try again tomorrow. You are not able to send more then {ticketLimit} tickets per day.",
+  "api.ticket.SAME_TICKET_FOR_PHONE_DAY_LIMIT_REACHED": "You already sent this ticket.",
   "api.property.exportPropertiesToExcel.NOTHING_TO_EXPORT": "No properties are found to export for current organization",
   "api.property.create.sameAddressError": "Property with the same address already exists in selected organization",
   "api.meter.exportMeterReadings.NOTHING_TO_EXPORT": "No meter readings to export for specified organization",
