--- a/apps/condo/lang/ru/ru.json
+++ b/apps/condo/lang/ru/ru.json
@@ -1537,6 +1537,8 @@
   "api.user.sendMessageToSupport.WRONG_EMAIL_FORMAT": "Неверный формат адреса электронной почты",
   "api.ticket.exportTicketsToExcel.NOTHING_TO_EXPORT": "Нет заявок для экспорта",
   "api.ticket.updateResidentTicket.TICKET_NOT_FOUND": "Не найдена заявка с id \"{ticketId}\" для текущего пользователя",
+  "api.ticket.TICKET_FOR_PHONE_DAY_LIMIT_REACHED": "Попробуйте завтра. Сегодня управляющая компания уже получила {ticketLimit} заявок от вас. На главной странице раздела «Заявки» можно уточнить статус по каждой из них.",
+  "api.ticket.SAME_TICKET_FOR_PHONE_DAY_LIMIT_REACHED": "Вы уже отправляли эту заявку. Управляющая компания уже занимается вашей проблемой. Уточнить статус можно на главной странице раздела «Заявки».",
   "api.property.exportPropertiesToExcel.NOTHING_TO_EXPORT": "Нет домов для экспорта, которые связаны с данной организацией",
   "api.property.create.sameAddressError": "Дом с таким адресом уже создан в выбранной организации",
   "api.meter.exportMeterReadings.NOTHING_TO_EXPORT": "Нет показаний ИПУ для экспорта, которые связаны с указанной организацией",
