--- a/apps/condo/lang/ru/ru.json
+++ b/apps/condo/lang/ru/ru.json
@@ -203,6 +203,24 @@
   "global.filters.dateRange.start": "Начальная дата",
   "global.filters.dateRange.end": "Конечная дата",
   "global.input.error.wrongEmails": "Неверный формат E-mail адресов",
+  "accrualsAndPayments.setup.title": "Настройка начислений и оплат",
+  "accrualsAndPayments.setup.chooseBillingStep.title": "Выбор биллинга",
+  "accrualsAndPayments.setup.setupBillingStep.title": "Настройка интеграции",
+  "accrualsAndPayments.setup.setupAcquiringStep.title": "Подписание офферты",
+  "accrualsAndPayments.setup.noReturn": "На данном этапе вернуться к этому шагу невозможно",
+  "accrualsAndPayments.onBoardingModal.title": "О разделе",
+  "accrualsAndPayments.onBoardingModal.text": "Чтобы жители оплачивали квитанции через мобильное приложение Doma, выберите способ загрузки и подпишите оферту. С этого момента все оплаты будут отображаться в этом разделе.",
+  "accrualsAndPayments.onBoardingModal.closeButton.message": "Спасибо, что рассказали",
+  "accrualsAndPayments.billingModal.receiptAwaitingTime": "Срок загрузки квитанций в приложение Doma:",
+  "accrualsAndPayments.billingModal.setupButtonLabel": "Настроить",
+  "accrualsAndPayments.setupBilling.instruction.doneButtonLabel": "Все готово",
+  "accrualsAndPayments.setupBilling.instruction.instructionButtonLabel": "Заглянуть в инструкцию",
+  "accrualsAndPayments.billing.statusTag.connected": "{name}: подключено",
+  "accrualsAndPayments.billing.statusTag.error": "{name}: ошибка",
+  "accrualsAndPayments.billing.noReceiptsYet": "Подключено, но квитанций пока нет",
+  "accrualsAndPayments.billing.uploadReceiptsAction.defaultMessage": "Загрузить квитанции",
+  "accrualsAndPayments.payments.noPaymentsYet.title": "Оплат пока нет",
+  "accrualsAndPayments.payments.noPaymentsYet.message": "Жители не оплатили ни одной квитанции. Как только это случится, информация о транзакциях появится здесь.",
   "miniapps.catalog.banner.more": "Подробнее",
   "miniapps.catalog.noServicesInCategory": "Сервисов в этой категории пока нет",
   "miniapps.catalog.noServicesFound": "Такого сервиса нет",
