fix(condo): DOMA-6083 added fixeds, fixed/refactored/added tests
fix(condo): DOMA-6083 added JSDoc to getCycleReplacer helper

fix(condo): DOMA-6083 fixes after review - renamed service, removed propertyId, refactored, added tests, fixed cyclic links cleaner for JSON.stringify, fixed types, fixed translations keys, fixed notifications settings, minor refactoring

--- a/apps/condo/lang/en/en.json
+++ b/apps/condo/lang/en/en.json
@@ -1611,6 +1611,12 @@
   "api.billing.sendNewReceiptMessagesToResidentScopes.SCOPES_IS_EMPTY": "Scopes could not be empty",
   "api.billing.sendNewReceiptMessagesToResidentScopes.INVALID_PROPERTY_PROVIDED": "All provided properties in scopes should be non-deleted & connected to organization of the billing context",
   "api.resident.sendMessageToResidentScopes.SCOPES_IS_EMPTY": "Scopes could not be empty",
+  "api.miniapp.sendB2CAppPushMessage.USER_NOT_FOUND": "Unable to find user by provided id.",
+  "api.miniapp.sendB2CAppPushMessage.RESIDENT_NOT_FOUND": "Unable to find resident by provided id.",
+  "api.miniapp.sendB2CAppPushMessage.APP_NOT_FOUND": "Unable to find app by provided id.",
+  "api.miniapp.sendB2CAppPushMessage.DV_VERSION_MISMATCH": "Wrong value for data version number",
+  "api.miniapp.sendB2CAppPushMessage.WRONG_SENDER_FORMAT": "Invalid format of \"sender\" field value. {details}",
+  "api.miniapp.sendB2CAppPushMessage.APP_IN_BLACK_LIST": "Could not send notifications for the blacklisted app",
   "excelExport.header.contacts.forAllTime": "Contacts for all time",
   "excelExport.header.contacts.forPeriod": "Contacts for the period",
   "excelExport.headers.payments.date": "Date",
