fix(condo): DOMA-5957 fixed quality control: * fixed translates * fixed images * reworked components

--- a/apps/condo/lang/en/en.json
+++ b/apps/condo/lang/en/en.json
@@ -1251,8 +1251,7 @@
   "ticket.qualityControlComment": "Comment",
   "ticket.modalQualityControl.edit": "Edit scoring",
   "ticket.modalQualityControl.save": "Save",
-  "ticket.modalQualityControl.bad.title": "What was wrong?",
-  "ticket.modalQualityControl.good.title": "Share your emotions",
+  "ticket.modalQualityControl.title": "Specify the opinion of the resident on the ticket",
   "ticket.modalQualityControl.leaveComment": "Leave a comment",
   "ticket.modalQualityControl.comment": "Your commentary",
   "ticket.modalQualityControl.comment.placeholder": "Comment text",
