--- a/apps/condo/lang/ru/ru.json
+++ b/apps/condo/lang/ru/ru.json
@@ -1251,8 +1251,7 @@
   "ticket.qualityControlComment": "Комментарий",
   "ticket.modalQualityControl.edit": "Изменить оценку",
   "ticket.modalQualityControl.save": "Готово",
-  "ticket.modalQualityControl.bad.title": "Что было не так?",
-  "ticket.modalQualityControl.good.title": "Поделитесь эмоциями",
+  "ticket.modalQualityControl.title": "Уточните мнение жителя по заявке",
   "ticket.modalQualityControl.leaveComment": "Оставить комментарий",
   "ticket.modalQualityControl.comment": "Комментарий к оценке",
   "ticket.modalQualityControl.comment.placeholder": "Текст комментария",
