feat(condo): DOMA-5920 NewsItemCard page (#3314)
* feat(condo): DOMA-5920 NewsItemCard page

* chore(condo): DOMA-5920 fixes after review

--- a/apps/condo/lang/en/en.json
+++ b/apps/condo/lang/en/en.json
@@ -953,6 +953,14 @@
   "pages.banking.report.sbbolSyncModal.description": "Specify sync period, for which you want to download transactions:",
   "pages.banking.report.sbbolSyncModalHint.title": "What will happen to previously uploaded transactions?",
   "pages.banking.report.sbbolSyncModalHint.description": "They will remain untouched. There will be no duplicates",
+  "pages.news.newsItemCard.title": "News №{number}",
+  "pages.news.newsItemCard.field.sentAt": "Sent date",
+  "pages.news.newsItemCard.field.type": "Type",
+  "pages.news.newsItemCard.field.validBefore": "Actual until",
+  "pages.news.newsItemCard.field.title": "Title",
+  "pages.news.newsItemCard.field.body": "Text",
+  "pages.news.newsItemCard.resendButton": "Resent",
+  "pages.news.newsItemCard.author": "author {createdBy}{isOwner, plural, other {} one { (you)}}",
   "property.import.column.Address": "Address",
   "property.import.column.Units": "Units",
   "property.import.column.Sections": "Sections",
@@ -1198,6 +1206,8 @@
   "notification.messages.NEWS_ITEM_COMMON_MESSAGE_TYPE.push.title": "{title}",
   "notification.messages.NEWS_ITEM_EMERGENCY_MESSAGE_TYPE.push.title": "{title}",
   "notification.messages.B2C_APP_MESSAGE_PUSH.push.title": "{title}",
+  "news.ConfirmDeleteTitle": "Delete news?",
+  "news.ConfirmDeleteMessage": "The news will be permanently deleted.",
   "TicketDeadline": "Ticket deadline",
   "TicketDeferredDeadline": "Ticket deferred deadline",
   "ticket.EmptyList.header": "The list of applications is still empty",
