--- a/apps/condo/lang/ru/ru.json
+++ b/apps/condo/lang/ru/ru.json
@@ -914,7 +914,7 @@
   "pages.users.InviteMessageTitle": "Вас пригласили в организацию «{name}»",
   "pages.users.PageTitle": "Пользователи",
   "pages.users.status.Accepted": "Принял приглашение",
-  "pages.users.status.NotActive": "Не актив ен",
+  "pages.users.status.NotActive": "Не активен",
   "pages.users.status.Rejected": "Пользователь отклонил приглашение.",
   "pages.users.status.WaitAcceptOrReject": "Зарегистрировался, пока не принял приглашение",
   "pages.users.UserIsAlreadyInList": "Пользователь уже добавлен в список",
@@ -953,6 +953,14 @@
   "pages.banking.report.sbbolSyncModal.description": "Выберите период, за который хотите загрузить транзакции:",
   "pages.banking.report.sbbolSyncModalHint.title": "Что будет с ранее загруженными транзакциями?",
   "pages.banking.report.sbbolSyncModalHint.description": "Они останутся нетронутыми. Дублей не будет.",
+  "pages.news.newsItemCard.title": "Новость №{number}",
+  "pages.news.newsItemCard.field.sentAt": "Дата отправки",
+  "pages.news.newsItemCard.field.type": "Тип",
+  "pages.news.newsItemCard.field.validBefore": "Актуально до",
+  "pages.news.newsItemCard.field.title": "Заголовок",
+  "pages.news.newsItemCard.field.body": "Текст",
+  "pages.news.newsItemCard.resendButton": "Повторить отправку",
+  "pages.news.newsItemCard.author": "автор {createdBy}{isOwner, plural, other {} one { (вы)}}",
   "property.import.column.Address": "Адрес",
   "property.import.column.Units": "Помещений",
   "property.import.column.Sections": "Подъездов",
@@ -1198,6 +1206,8 @@
   "notification.messages.NEWS_ITEM_COMMON_MESSAGE_TYPE.push.title": "{title}",
   "notification.messages.NEWS_ITEM_EMERGENCY_MESSAGE_TYPE.push.title": "{title}",
   "notification.messages.B2C_APP_MESSAGE_PUSH.push.title": "{title}",
+  "news.ConfirmDeleteTitle": "Удалить новость?",
+  "news.ConfirmDeleteMessage": "Новость будет удалена навсегда.",
   "TicketDeadline": "Срок выполнения заявки",
   "TicketDeferredDeadline": "Срок отложенности заявки",
   "ticket.EmptyList.header": "Список заявок пока пуст",
