feat(condo): DOMA-5918 add NewsPreview component

--- a/apps/condo/lang/en/en.json
+++ b/apps/condo/lang/en/en.json
@@ -173,6 +173,9 @@
   "LoadingInProgress": "Loading in progress…",
   "NotFound": "Not found",
   "Logout": "Logout",
+  "Now": "Now",
+  "MobileAppResident": "Resident app",
+  "PushNotification": "Push-notification",
   "global.section.accrualsAndPayments": "Accruals and payments",
   "global.section.analytics": "Analytics",
   "global.section.onBoarding": "Where to begin?",
@@ -962,6 +965,9 @@
   "pages.news.newsItemCard.field.body": "Text",
   "pages.news.newsItemCard.resendButton": "Resent",
   "pages.news.newsItemCard.author": "author {createdBy}{isOwner, plural, other {} one { (you)}}",
+  "pages.news.create.preview.app.notificationFromOrganization": "Notification from organization",
+  "pages.news.create.preview.app.receivedAt": "Today, 9:00",
+  "pages.news.create.preview.app.validUntil": "valid until {validBefore}",
   "property.import.column.Address": "Address",
   "property.import.column.Units": "Units",
   "property.import.column.Sections": "Sections",
