--- a/apps/condo/lang/ru/ru.json
+++ b/apps/condo/lang/ru/ru.json
@@ -173,6 +173,9 @@
   "LoadingInProgress": "Идет загрузка…",
   "NotFound": "Не найдено",
   "Logout": "Выйти",
+  "Now": "Сейчас",
+  "MobileAppResident": "Приложение жителя",
+  "PushNotification": "Push-уведомления",
   "global.section.accrualsAndPayments": "Начисления и оплаты",
   "global.section.analytics": "Аналитика",
   "global.section.onBoarding": "С чего начать?",
@@ -962,6 +965,9 @@
   "pages.news.newsItemCard.field.body": "Текст",
   "pages.news.newsItemCard.resendButton": "Повторить отправку",
   "pages.news.newsItemCard.author": "автор {createdBy}{isOwner, plural, other {} one { (вы)}}",
+  "pages.news.create.preview.app.notificationFromOrganization": "Уведомление от УК",
+  "pages.news.create.preview.app.receivedAt": "Сегодня, 9:00",
+  "pages.news.create.preview.app.validUntil": "актуально до {validBefore}",
   "property.import.column.Address": "Адрес",
   "property.import.column.Units": "Помещений",
   "property.import.column.Sections": "Подъездов",
