--- a/apps/condo/lang/ru/ru.json
+++ b/apps/condo/lang/ru/ru.json
@@ -1625,6 +1625,7 @@
   "excelExport.headers.contacts.phone": "Телефон",
   "excelExport.headers.contacts.email": "Почта",
   "excelExport.headers.contacts.role": "Роль",
+  "excelExport.headers.contacts.isVerified": "Верифицирован",
   "excelExport.headers.meters.date": "Дата снятия",
   "excelExport.headers.meters.address": "Адрес",
   "excelExport.headers.meters.unitName": "Помещение",
