fix(condo): DOMA-5669 added number validation for contact form

--- a/apps/condo/lang/ru/ru.json
+++ b/apps/condo/lang/ru/ru.json
@@ -207,6 +207,8 @@
   "global.filters.dateRange.start": "Начальная дата",
   "global.filters.dateRange.end": "Конечная дата",
   "global.input.error.wrongEmails": "Неверный формат E-mail адресов",
+  "global.input.error.wrongPhone": "Не соответствует формату +7 (XXX) XXX-XX-XX",
+  "global.input.error.wrongMobilePhone": "Не соответствует формату +7 (XXX) XXX-XX-XX или это не мобильный телефон",
   "global.globalHints.canDisableHints": "Отключить эти подсказки можно в",
   "global.globalHints.canDisableHints.inProfile": "профиле",
   "global.globalHints.banner.more": "Как это работает",
@@ -334,7 +336,6 @@
   "pages.auth.PasswordWasChanged": "Пароль изменен",
   "pages.auth.PasswordWasChangedDescription": "Вы уже можете использовать свой новый пароль для входа",
   "pages.auth.PhoneIsAlreadyRegistered": "Данный номер телефона уже зарегистрирован",
-  "pages.auth.PhoneIsNotValid": "Не соответствует формату +7 (XXX) XXX-XX-XX или это не мобильный телефон",
   "pages.auth.PleaseConfirmYourPassword": "Введите пароль повторно для подтверждения",
   "pages.auth.PleaseInputYourEmail": "Введите Эл. почту",
   "pages.auth.PleaseInputYourName": "Введите имя",
