--- a/apps/condo/lang/en/en.json
+++ b/apps/condo/lang/en/en.json
@@ -207,6 +207,8 @@
   "global.filters.dateRange.start": "Start date",
   "global.filters.dateRange.end": "Final date",
   "global.input.error.wrongEmails": "Wrong format of E-mail addresses",
+  "global.input.error.wrongPhone": "Wrong phone format, we expect +1 (XXX) XXX XX XX",
+  "global.input.error.wrongMobilePhone": "Wrong phone format or it's not a mobile number, we expect +1 (XXX) XXX XX XX",
   "global.globalHints.canDisableHints": "You can disable these hints in",
   "global.globalHints.canDisableHints.inProfile": "profile",
   "global.globalHints.banner.more": "More",
@@ -334,7 +336,6 @@
   "pages.auth.PasswordWasChanged": "The password was changed",
   "pages.auth.PasswordWasChangedDescription": "You can use you new password to sign in",
   "pages.auth.PhoneIsAlreadyRegistered": "This phone is already registered!",
-  "pages.auth.PhoneIsNotValid": "Wrong phone format or it's not a mobile number, we expect +1 (XXX) XXX XX XX",
   "pages.auth.PleaseConfirmYourPassword": "Please confirm your password",
   "pages.auth.PleaseInputYourEmail": "Please input your Email",
   "pages.auth.PleaseInputYourName": "Please input your Name",
