fix(condo): DOMA-6163 fixed translations

--- a/apps/condo/lang/ru/ru.json
+++ b/apps/condo/lang/ru/ru.json
@@ -1020,7 +1020,7 @@
   "meterReadingSource.Visit.name": "Визит в офис",
   "meterReadingSource.WebApp.name": "ЛК сайт",
   "meterReadingSource.OrganizationSite.name": "Сайт организации",
-  "meterReadingSource.Messenger.name": "Мессенджеры (tg, watsapp, viber, ..)",
+  "meterReadingSource.Messenger.name": "Мессенджеры (tg, whatsapp, viber, ..)",
   "meterReadingSource.SocialNetwork.name": "Соц. сети (vk, fb, ..)",
   "meterReadingSource.MobileAppStaff.name": "ЛК приложение сотрудника",
   "meterResource.ColdWater.name": "Холодная вода",
@@ -1246,7 +1246,7 @@
   "ticket.source.VISIT.name": "Визит в офис",
   "ticket.source.WEB_APP.name": "ЛК сайт",
   "ticket.source.ORGANIZATION_SITE.name": "Сайт организации",
-  "ticket.source.MESSENGER.name": "Мессенджеры (tg, watsapp, viber, ..)",
+  "ticket.source.MESSENGER.name": "Мессенджеры (tg, whatsapp, viber, ..)",
   "ticket.source.SOCIAL_NETWORK.name": "Соц. сети (vk, fb, ..)",
   "ticket.source.MOBILE_APP_STAFF.name": "ЛК приложение сотрудника",
   "ticket.source.MOBILE_APP_RESIDENT.name": "Приложение жителя",
