--- a/apps/condo/lang/en/en.json
+++ b/apps/condo/lang/en/en.json
@@ -1246,7 +1246,7 @@
   "ticket.source.VISIT.name": "Office visit",
   "ticket.source.WEB_APP.name": "Web application",
   "ticket.source.ORGANIZATION_SITE.name": "Organization site",
-  "ticket.source.MESSENGER.name": "Messengers (tg, watsapp, viber, ..)",
+  "ticket.source.MESSENGER.name": "Messengers (tg, whatsapp, viber, ..)",
   "ticket.source.SOCIAL_NETWORK.name": "Social media (vk, fb, ..)",
   "ticket.source.MOBILE_APP_STAFF.name": "Staff mobile app",
   "ticket.source.MOBILE_APP_RESIDENT.name": "Resident mobile app",
