feat(condo): DOMA-6090 no receipts for proceeding recurrent payment (#3334)
* feat(condo): DOMA-6090 no receipts for tomorrow recurrent payment notification

* feat(condo): DOMA-6090 no receipts for proceeding recurrent payment notification

* feat(condo): DOMA-6090 add new notification types

* feat(condo): DOMA-6090 add new notification types

* feat(condo): DOMA-6090 add new notification types

* fix(condo): DOMA-6090 refactor notifyBeforeRecurrentPaymentDate.js script

--- a/apps/condo/lang/en/en.json
+++ b/apps/condo/lang/en/en.json
@@ -1213,7 +1213,9 @@
   "notification.messages.RECURRENT_PAYMENT_PROCEEDING_CONTEXT_DISABLED_ERROR_MESSAGE.push.title": "Autopayment error 🚨",
   "notification.messages.RECURRENT_PAYMENT_PROCEEDING_CARD_TOKEN_NOT_VALID_ERROR_MESSAGE.push.title": "Autopayment error 🚨",
   "notification.messages.RECURRENT_PAYMENT_PROCEEDING_CAN_NOT_REGISTER_MULTI_PAYMENT_ERROR_MESSAGE.push.title": "Autopayment error 🚨",
+  "notification.messages.RECURRENT_PAYMENT_PROCEEDING_NO_RECEIPTS_TO_PROCEED_ERROR_MESSAGE.push.title": "Autopayment error 🚨",
   "notification.messages.RECURRENT_PAYMENT_TOMORROW_PAYMENT_MESSAGE.push.title": "Autopayment reminder 😉",
+  "notification.messages.RECURRENT_PAYMENT_TOMORROW_PAYMENT_NO_RECEIPTS_MESSAGE.push.title": "Autopayment reminder 😉",
   "notification.messages.NEWS_ITEM_COMMON_MESSAGE_TYPE.push.title": "{title}",
   "notification.messages.NEWS_ITEM_EMERGENCY_MESSAGE_TYPE.push.title": "{title}",
   "notification.messages.B2C_APP_MESSAGE_PUSH.push.title": "{title}",
