feat(condo): DOMA-6054 add BillingReceiptFile model (#3289)
* feat(condo): DOMA-6054 add BillingReceiptFile model

* feat(condo): DOMA-6054 added integration user access

* feat(condo): DOMA-6054 regenerated migration, fixed access

* feat(condo): DOMA-6054 added tests

* feat(condo): DOMA-6054 removed prev migration, added importId field

* feat(condo): DOMA-6054 regenerated migration

* feat(condo): DOMA-6054 rebase

* feat(condo): DOMA-6054 added showPDF button to Services Modal

* feat(condo): DOMA-6054 removed ui changes (will bw added in self-service billing)

* feat(condo): DOMA-6054 added getting single pdf file by receipt id

* refactor(condo): DOMA-6054 deleted old migration

* refactor(condo): DOMA-6054 regenerated migration

* feat(condo): DOMA-6054 added more tests, fixed access

* refactor(condo): DOMA-6054 deleted old migration

* refactor(condo): DOMA-6054 new migration

--- a/apps/condo/lang/en/en.json
+++ b/apps/condo/lang/en/en.json
@@ -1477,6 +1477,9 @@
   "pages.billing.NoBilling.title": "You haven't connected any billing yet",
   "pages.billing.NoBilling.message": "See which integrations are available in our platform",
   "pages.billing.NoBilling.button": "View list of integrations",
+  "pages.billing.ReceiptsTable.PDFTooltip": "View PDF-receipt",
+  "pages.billing.ReceiptsTable.loadRegistry.button": "Load registry",
+  "pages.billing.Status.success.title": "Payments from individuals are enabled",
   "WillBeReadySoon": "Everything will be ready soon",
   "Accruals": "Accruals",
   "Payments": "Payments",
