--- a/apps/condo/lang/ru/ru.json
+++ b/apps/condo/lang/ru/ru.json
@@ -1477,6 +1477,9 @@
   "pages.billing.NoBilling.title": "Вы пока не подключили биллинг",
   "pages.billing.NoBilling.message": "Посмотрите, какие интеграции сейчас можно подключить у нас в платформе",
   "pages.billing.NoBilling.button": "Посмотреть список интеграций",
+  "pages.billing.ReceiptsTable.PDFTooltip": "Посмотреть PDF-квитанцию",
+  "pages.billing.ReceiptsTable.loadRegistry.button": "Загрузить реестр",
+  "pages.billing.Status.success.title": "Платежи от физлиц подключены",
   "WillBeReadySoon": "Скоро всё будет готово",
   "Accruals": "Начисления",
   "Payments": "Оплаты",
