feat (condo): DOMA-5919 news item recipients count component (#3316)
* refactor(condo): DOMA-5919 changed usage of `findOne` to domain-specific serverUtils

* refactor(condo): DOMA-5919 added "deletedAt" to "queryFindResidentsByNewsItemAndScopes"

* refactor(condo): DOMA-5919 counter for recipients of NewsItem

* refactor(condo): DOMA-5919 fixed wrong import of "gql" from "graphql-tag"

* fix(condo): DOMA-5919 function "queryFindResidentsByNewsItemAndScopes" builds wrong condition

In case when "newsItemScopes" is empty array, it builds redundant empty part `{ OR: [] }`, that causes to fetch empty Resident result

* fix(condo): DOMA-5919 added value calculation for "Will not receive" counter

* fix(condo): DOMA-5919 fixed translations for RecipientCounter

* fix(condo): DOMA-5919 fixed calculations in RecipientCounter

* fix(condo): DOMA-5919 added NewsItem select to demo page

* feat(condo): DOMA-5919 added tooltips to values of RecipientCounter

* feat(condo): DOMA-5919 replaced "useObjects" to "useAllObjects" in RecipientCounter

* feat(condo): DOMA-5919 Branch was rebased, fix objects after queries were moved to context

* feat(condo): DOMA-5919 Empty NewsItemScope is not needed anymore for sending news item to all organization

* feat(condo): DOMA-5919 Refuse the sending date in the past

* feat(condo): DOMA-5919 Fix setting of default type

* fix(condo): DOMA-5919 allow to query news items by scope + tests

* fix(condo): DOMA-5919 Remove emotion/styled

* fix(condo): DOMA-5919 Added front-end type for scope

* fix(condo): DOMA-5919 Translations fixed

* fix(condo): DOMA-5919 No scopes means all organization

* fix(condo): DOMA-5919 Creation of empty scope is refused

* fix(condo): DOMA-5919 Fix after code review 1

* fix(condo): DOMA-5919 Fix after code review 1

---------

Co-authored-by: AleX83Xpert <AleX83Xpert@mail.ru>

--- a/apps/condo/lang/en/en.json
+++ b/apps/condo/lang/en/en.json
@@ -1136,6 +1136,19 @@
   "AddItemUsingFileUpload": "Using file input",
   "Status": "Status",
   "Account": "Account",
+  "news.component.RecipientCounter.mailing": "Mailing",
+  "news.component.RecipientCounter.label.properties": "houses",
+  "news.component.RecipientCounter.willReceive.label": "will receive",
+  "news.component.RecipientCounter.willReceive.hint": "In {count} units found users of mobile app Doma — they will receive letter",
+  "news.component.RecipientCounter.willNotReceive.label": "will not receive",
+  "news.component.RecipientCounter.willNotReceive.hint": "There is no users of mobile app Doma in these units — they will not receive letter. Download a list of addresses to know who is using the app",
+  "news.component.RecipientCounter.toResidentsInAllProperties": " to all addresses",
+  "news.component.RecipientCounter.toResidentsInProperty": " to property: {address}",
+  "news.component.RecipientCounter.toResidentsInProperties": " to addresses: {addressList}{andMore}}",
+  "news.component.RecipientCounter.toResidentsInProperties.andMore": " and more {count} addresses",
+  "news.component.RecipientCounter.toResidentsInPropertySection": " to section {section} at {address}",
+  "news.component.RecipientCounter.toResidentsInPropertySections": " to sections {sections} at {address}",
+  "news.component.RecipientCounter.toResidentsInPropertyUnits": " to units {unitNames} at {address}",
   "notification.messages.MESSAGE_FORWARDED_TO_SUPPORT.email.subject": "Message from mobile application",
   "notification.messages.DIRTY_INVITE_NEW_EMPLOYEE_SMS.email.subject": "You are invited to join organization as employee",
   "notification.messages.DIRTY_INVITE_NEW_EMPLOYEE_SMS.push.title": "You are invited to join organization as employee",
@@ -1609,6 +1622,8 @@
   "api.newsItem.EDIT_DENIED_PUBLISHED": "You can not edit published news item",
   "api.newsItem.VALIDITY_DATE_LESS_THAN_SEND_DATE": "The validity date is less than send date",
   "api.newsItem.PROFANITY_DETECTED_MOT_ERF_KER": "Profanity detected",
+  "api.newsItem.WRONG_SEND_DATE": "Wrong send date",
+  "api.newsItem.EMPTY_NEWS_ITEM_SCOPE": "Empty scope",
   "api.ticket.QUALITY_CONTROL_ADDITIONAL_OPTION_DOES_NOT_MATCH_QUALITY_CONTROL_VALUE": "Additional quality control parameters must match the specified scoring",
   "api.ticket.QUALITY_CONTROL_VALUE_MUST_BE_SPECIFIED": "When specifying a comment or additional evaluation parameters, you must specify the evaluation itself",
   "api.billing.sendNewReceiptMessagesToResidentScopes.INVALID_PERIOD_PROVIDED": "Please provide proper period not before start of previous and not later than start of current month, valid format is YYYY-MM-DD",
