--- a/apps/condo/lang/ru/ru.json
+++ b/apps/condo/lang/ru/ru.json
@@ -1136,6 +1136,19 @@
   "AddItemUsingFileUpload": "Через загрузку файла",
   "Status": "Статус",
   "Account": "Аккаунт",
+  "news.component.RecipientCounter.mailing": "Рассылка",
+  "news.component.RecipientCounter.label.properties": "дома",
+  "news.component.RecipientCounter.willReceive.label": "получат",
+  "news.component.RecipientCounter.willReceive.hint": "В {count, plural, one {# помещении} other {# помещениях}} есть \u2028пользователи мобильного \u2028приложения Doma — они получат \u2028новость",
+  "news.component.RecipientCounter.willNotReceive.label": "не получат",
+  "news.component.RecipientCounter.willNotReceive.hint": "В помещениях нет пользователей \u2028мобильного приложения Doma — \u2028они не получат новость. Скачайте \u2028список адресов, чтобы узнать, кто \u2028пользуется приложением.",
+  "news.component.RecipientCounter.toResidentsInAllProperties": " по всем адресам",
+  "news.component.RecipientCounter.toResidentsInProperty": " по адресу: {address}",
+  "news.component.RecipientCounter.toResidentsInProperties": " по адресам: {addressList}{andMore}",
+  "news.component.RecipientCounter.toResidentsInProperties.andMore": " и ещё {count, plural, one {# адрес} few {# адреса} many {# адресов}}",
+  "news.component.RecipientCounter.toResidentsInPropertySection": " по подъезду {section} по адресу {address}",
+  "news.component.RecipientCounter.toResidentsInPropertySections": " по подъездам {sections} по адресу {address}",
+  "news.component.RecipientCounter.toResidentsInPropertyUnits": " по квартирам {unitNames} по адресу {address}",
   "notification.messages.MESSAGE_FORWARDED_TO_SUPPORT.email.subject": "Обращение из мобильного приложения",
   "notification.messages.DIRTY_INVITE_NEW_EMPLOYEE_SMS.email.subject": "Вас пригласили присоединиться к организации в качестве сотрудника",
   "notification.messages.DIRTY_INVITE_NEW_EMPLOYEE_SMS.push.title": "Вас пригласили присоединиться к организации в качестве сотрудника",
@@ -1609,6 +1622,8 @@
   "api.newsItem.EDIT_DENIED_PUBLISHED": "Нельзя редактировать опубликованную новость",
   "api.newsItem.VALIDITY_DATE_LESS_THAN_SEND_DATE": "Дата актуальности меньше чем дата отправки",
   "api.newsItem.PROFANITY_DETECTED_MOT_ERF_KER": "Обнаружена ненормативная лексика",
+  "api.newsItem.WRONG_SEND_DATE": "Неверная дата отправки",
+  "api.newsItem.EMPTY_NEWS_ITEM_SCOPE": "Не указаны получатели",
   "api.ticket.QUALITY_CONTROL_ADDITIONAL_OPTION_DOES_NOT_MATCH_QUALITY_CONTROL_VALUE": "Дополнительные параметры контроля качества должны соответсоввать указанной оценке",
   "api.ticket.QUALITY_CONTROL_VALUE_MUST_BE_SPECIFIED": "При указании комментария или дополнительных параметров оценки нужно указать саму оценку",
   "api.billing.sendNewReceiptMessagesToResidentScopes.INVALID_PERIOD_PROVIDED": "Необходимо передать период не ранее начала прошлого месяца и не позднее начала текущего месяца, валидный формат - YYYY-MM-DD",
