fix(condo): DOMA-5052 fixed registration error displaying (#3383)

--- a/apps/condo/lang/en/en.json
+++ b/apps/condo/lang/en/en.json
@@ -113,7 +113,7 @@
   "field.floorName": "Floor",
   "field.FullName": "Full name",
   "field.FullName.short": "Full name",
-  "field.FullName.invalidChar": "You entered invalid characters - correct. You can only enter letters, spaces, and hyphens",
+  "field.FullName.invalidChar": "You can only enter letters, spaces, and hyphens",
   "field.Phone.lengthError": "The value of the field \" Phone \"is too long (Maximum: 15 characters)",
   "field.Phone.requiredError": "Enter your phone",
   "field.Property.requiredError": "Enter the address",
@@ -339,7 +339,6 @@
   "pages.auth.PleaseConfirmYourPassword": "Please confirm your password",
   "pages.auth.PleaseInputYourEmail": "Please input your Email",
   "pages.auth.PleaseInputYourName": "Please input your Name",
-  "pages.auth.NameContainsOnly": "The name can contain only letters",
   "pages.auth.NameMustContain": "The name must contain at least one letter",
   "pages.auth.NameMustNotStartOrAnd": "The name must not start or end with hyphen",
   "pages.auth.PleaseInputYourPassword": "Please input your Password",
