--- a/apps/condo/lang/ru/ru.json
+++ b/apps/condo/lang/ru/ru.json
@@ -113,7 +113,7 @@
   "field.floorName": "Этаж",
   "field.FullName": "Фамилия Имя Отчество",
   "field.FullName.short": "ФИО",
-  "field.FullName.invalidChar": "Вы ввели недопустимые символы — исправьте. Можно вводить только буквы, пробелы и дефисы",
+  "field.FullName.invalidChar": "Это поле может содержать только буквы, пробелы и дефисы",
   "field.Phone.lengthError": "Значение поля \"Телефон\" слишком длинное (Максимум: 15 симв.)",
   "field.Phone.requiredError": "Укажите телефон",
   "field.Property.requiredError": "Укажите адрес",
@@ -339,7 +339,6 @@
   "pages.auth.PleaseConfirmYourPassword": "Введите пароль повторно для подтверждения",
   "pages.auth.PleaseInputYourEmail": "Введите Эл. почту",
   "pages.auth.PleaseInputYourName": "Введите имя",
-  "pages.auth.NameContainsOnly": "Имя может состоять только из букв",
   "pages.auth.NameMustContain": "Имя должно содержать хотя бы одну букву",
   "pages.auth.NameMustNotStartOrAnd": "Имя не может начинаться или заканчиваться дефисом",
   "pages.auth.PleaseInputYourPassword": "Введите пароль",
